socket updated and basic functional html was added

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,18 @@
     </head>
 
     <body>
-        <div id="massageBar"></div>
-        <div>
-            asdasd
+        <h1>Welcome</h1>
+        <div >
+            <form id="messageForm">
+                <input type="text" name="message"/>
+                <button>Send</button>
+            </form>
         </div>
+
+
+
+
+        <div id="messageBar"></div>
         <script src="/js/socket.io.js"></script>
         <script src="/js/chat.js"></script>
     </body>
