--- a/public/loading.html
+++ b/public/loading.html
@@ -5,7 +5,7 @@
         <title></title>
     </head>
     <body>
-        <h1>index.html</h1>
-        <script src="/js/index.js"></script>
+        <h1>Loading</h1>
+        <script src="/js/loading.js"></script>
     </body>
 </html>
