Direct chat init

--- a/public/chat.html
+++ b/public/chat.html
@@ -19,13 +19,14 @@
             </form>
         </div>
         <!-- Templates -->
+
         <div>
             <script id="messageTemplate" type="text/html">
-                <dev>
+                <div>
                     <p>
                         {{user}}: {{message}}
                     </p>
-                </dev>
+                </div>
             </script>
         </div>
 
