--- a/public/chats.html
+++ b/public/chats.html
@@ -10,7 +10,7 @@
 
         <div id="chats" class="chat__messages"></div>
 
-        <div id="chatSelectFormPart">
+        <div id="chatSelectForm">
             <form id="chatForm">
                 <input type="text" name="userName"/>
                 <button>Send</button>
@@ -32,6 +32,7 @@
 
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+        <script src="/js/socket.io.js"></script>
         <script src="/js/chats.js"></script>
     </body>
 </html>
