--- a/public/chats.html
+++ b/public/chats.html
@@ -33,6 +33,6 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
         <script src="/js/socket.io.js"></script>
-        <script src="/js/chats.js"></script>
+        <script type="module" src="/js/chats.mjs"></script>
     </body>
 </html>
