--- a/public/login.html
+++ b/public/login.html
@@ -18,6 +18,11 @@
             </form>
         </div>
 
+        <div>
+            <br>
+            <button id="signUpButton">Sign up</button>
+        </div>
+
         <script src="/js/login.js"></script>
     </body>
 </html>
