--- a/public/chats.html
+++ b/public/chats.html
@@ -3,10 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <link rel="stylesheet" href="/css/style.css" />
+        <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
         <h1>Chats</h1>
+
+        <div id="newChatFormPart">
+            <form id="newChatForm">
+                <input id="newChatInput" placeholder="Username" />
+                <button>start chat</button>
+            </form>
+        </div>
 
         <div id="chats" class="chat__messages"></div>
 
@@ -22,7 +29,7 @@
 
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-        <script src="/js/socket.io.js"></script>
-        <script type="module" src="/js/chats.mjs"></script>
+        <script src="js/socket.io.js"></script>
+        <script src="js/chats.js"></script>
     </body>
 </html>
